started refactor of WvsContext